feat: StringUtils 불필요 사용 제거